Started work on adding content

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
       <!-- Hero -->
       <section class="p-5 mb-4 bg-body-tertiary rounded-3">
         <h2 class="display-6 mb-3">Hero Section</h2>
+        <p>
+          Hello I am Michael Voelkelt, I am a student at Metropolitan State
+          University of Denver. i am currently starting out my first semester as
+          of Fall 2025. 
+        </p>
         <a class="btn btn-primary" href="#">Get Started</a>
       </section>
 
