--- a/about.html
+++ b/about.html
@@ -37,19 +37,12 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="index.html"
+                <a class="nav-link active" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="about.html"
-                  >About</a
-                >
+                <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
@@ -59,3 +52,59 @@
         </div>
       </nav>
     </h5>
+    <!-- Toggle light-page ↔ dark-page -->
+
+    <!-- Main content -->
+
+    <main class="container py-4">
+      <h1 class="mb-2">About</h1>
+      <p class="mb-3">
+        This paragraph uses the page text color. Here’s a
+        <a href="#">content link</a>.
+      </p>
+
+      <!-- Hero -->
+      <section class="p-5 mb-4 bg-body-tertiary rounded-3">
+        <h2 class="display-6 mb-3">Hero Section</h2>
+        <p>
+          Hello I am Michael Voelkelt, I am a student at Metropolitan State
+          University of Denver. i am currently starting out my first semester as
+          of Fall 2025. 
+        </p>
+        <a class="btn btn-primary" href="#">Get Started</a>
+      </section>
+
+      <!-- Box -->
+      <div class="box mb-4">
+        <h3 class="h5">Plain Box</h3>
+        <p class="mb-0">
+          This is a plain div styled as a surface. <a href="#">Read more</a>
+        </p>
+      </div>
+
+      <!-- Card -->
+      <div class="card shadow-sm mb-4" style="max-width: 40rem">
+        <div class="card-body">
+          <h4 class="card-title h5">Card Title</h4>
+          <p class="card-text">
+            Cards pick up the surface/background and text from the theme.
+          </p>
+          <a class="btn btn-primary" href="#">Card Action</a>
+        </div>
+      </div>
+
+      <!-- List group -->
+      <ul class="list-group" style="max-width: 28rem">
+        <li class="list-group-item">First item</li>
+        <li class="list-group-item">Second item</li>
+        <li class="list-group-item">Third item</li>
+      </ul>
+    </main>
+
+    <script>
+      // Load only the #site-nav element
+      $("#nav-placeholder").load("navbar.html #site-nav");
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+</html>
