--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   <body class="light-page">
     <!-- Navbar gets added here -->
     <h5>
-      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <nav class="navbar navbar-expand-sm site-nav ">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Michael Voelkelt</a>
           <button
@@ -37,7 +37,7 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link " aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
