--- a/projects.html
+++ b/projects.html
@@ -37,19 +37,12 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link"
-                  aria-current="page"
-                  href="index.html"
+                <a class="nav-link" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="about.html"
-                  >About</a
-                >
+                <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
@@ -59,3 +52,5 @@
         </div>
       </nav>
     </h5>
+  </body>
+</html>
