--- a/index.html
+++ b/index.html
@@ -77,10 +77,8 @@
       <div class="box shadow-sm mb-4" style="max-width: 30rem">
         <img
           src="images/homepage.jpg"
-          class="img-fluid"
-          class="rounded"
+          class="img-fluid rounded container-fluid"
           alt="Image of Michael "
-          class="container-fluid"
           width="400"
           height="200"
         />
