added image carousel not finished

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-- Main content -->
     <main class="container p-4">
-      <h1 class="mb-4 box shadow-sm mb-4" style="max-width: 50rem">Home</h1>
+      <h1 class="box shadow-sm mb-4" style="max-width: 50rem">Home</h1>
 
       <!-- Hero -->
       <section class="box shadow-sm mb-4" class="container-fluid">
