--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Template</title>
+    <title>About Me</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -57,30 +57,151 @@
     <!-- Main content -->
 
     <main class="container py-4">
-      <h1 class="mb-2">About</h1>
-      <p class="mb-3">
-        This paragraph uses the page text color. Here’s a
-        <a href="#">content link</a>.
-      </p>
+      <h1 class="box shadow-sm mb-4" style="max-width: 50rem">About</h1>
 
       <!-- Hero -->
-      <section class="p-5 mb-4 bg-body-tertiary rounded-3">
-        <h2 class="display-6 mb-3">Hero Section</h2>
+      <section class="box shadow-sm mb-4 container-fluid">
+        <h2 class="display-6 mb-3">More About Me</h2>
         <p>
-          Hello I am Michael Voelkelt, I am a student at Metropolitan State
-          University of Denver. i am currently starting out my first semester as
-          of Fall 2025.
+          I am a Colorado native and am pretty big on getting out to the
+          mountains and surrounding areas. I love to fly fish the Platte or the
+          Colorado River and anything else local. I also enjoy hiking and
+          walking around in nature to take in the silence and beauty of Gods
+          creation. I like getting outside and playing volleyball with friends
+          and family. I also love volunteering with Military Living History
+          groups,
+          <a href="http://www.tenthmountain.org/"
+            >Tenth Mountain Division Living History Display Group, Inc.</a
+          >
+          and
+          <a href="https://amlhacom.wordpress.com/"
+            >American Military Living history Association</a
+          >
+          We have done displays at the anual 40s Ball in Boulder,
+          <a href="https://broomfieldveterans.org/#"
+            >Broomfield Veterans Museum</a
+          >
+          , and Vetrans and Memorial Day parades and services across Colorado.
         </p>
         <a class="btn btn-primary" href="#">Get Started</a>
       </section>
 
       <!-- Box -->
-      <div class="box mb-4">
-        <h3 class="h5">Plain Box</h3>
-        <p class="mb-0">
-          This is a plain div styled as a surface. <a href="#">Read more</a>
-        </p>
+      
+        <!--Carousel-->
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+        <!-- Indicators/dots -->
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#demo"
+            data-bs-slide-to="0"
+            class="active"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#demo"
+            data-bs-slide-to="1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#demo"
+            data-bs-slide-to="2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#demo"
+            data-bs-slide-to="3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#demo"
+            data-bs-slide-to="4"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#demo"
+            data-bs-slide-to="5"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#demo"
+            data-bs-slide-to="6"
+          ></button>
+        </div>
+        <!-- The slideshow/carousel -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="images/fishing.jpeg"
+              alt="Fly fishing on bank of river"
+              class="d-block mx-auto carousel-img"
+              style="width: auto "
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="images/western2025.jpg"
+              alt="Western welcome week parade August 2025"
+              class="d-block mx-auto carousel-img"
+              style="width: 75%"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="images/lake.jpg"
+              alt="Michael on lake reservior pier"
+              class="d-block mx-auto carousel-img"
+              style="width: 50%"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="images/broomfield2024.jpg"
+              alt="Broomfield, Colorado parade"
+              class="d-block mx-auto carousel-img"
+              style="width: 50%"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="images/cohistory2024.jpg"
+              alt="Colorado history museum exhibit (winter warriors)"
+              class="d-block mx-auto carousel-img"
+              style="width: 50%"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="images/d-day2024.jpg"
+              alt="D-day memorial"
+              class="d-block mx-auto carousel-img"
+              style="width: 50%"
+            />
+          </div>
+        </div>
+        <!-- Left and right controls/icons -->
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#demo"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#demo"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon"></span>
+        </button>
       </div>
+    </div>
+   
+
+    
 
       <!-- Card -->
       <div class="card shadow-sm mb-4" style="max-width: 40rem">
