--- a/about.html
+++ b/about.html
@@ -179,6 +179,14 @@
               
             />
           </div>
+          <div class="carousel-item">
+            <img
+              src="images/western2024.jpg"
+              alt="Wester Welcome week parade August 2024"
+              class="d-block mx-auto carousel-img"
+              
+            />
+          </div>
         </div>
         <!-- Left and right controls/icons -->
         <button
