--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h1 class="box shadow-sm mb-4" style="max-width: 50rem">Home</h1>
 
       <!-- Hero -->
-      <section class="box shadow-sm mb-4" class="container-fluid">
+      <section class="box shadow-sm mb-4 container-fluid">
         <h2 class="display-6 mb-3">Introduction</h2>
         <p>
           Hello I am Michael Voelkelt, I have just graduated from Colorado Early
