--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="box shadow-sm mb-4" style="max-width: 30rem">
         <img
           src="images/homepage.jpg"
-          class="img-fluid rounded container-fluid"
+          class="rounded container-fluid"
           alt="Image of Michael "
           width="400"
           height="200"
