--- a/projects.html
+++ b/projects.html
@@ -52,5 +52,17 @@
         </div>
       </nav>
     </h5>
+
+<div class="box shadow-sm mb-4" style="max-width: 30rem">
+        <img
+          src="images/homepage.jpg"
+          class="img-fluid rounded container-fluid"
+          alt="Image of Michael "
+          width="400"
+          height="200"
+        />
+      </div>
+
+
   </body>
 </html>
