--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
           height="200"
         />
       </div>
+<div class="container mt-3 text-center">
+      <h2>Kingfisher</h2>
+      <p>Image of Kingfisher Bird</p>
+      <img src="images/lake.jpg" alt="kingfisher Bird" class="mx-auto d-block" style="width:50%">
+    </div>
 
       <!-- Card -->
       <h2 class="mb-2 box shadow-sm mb-4" style="max-width: 50rem">
