--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- Box -->
       <div class="box shadow-sm mb-4" style="max-width: 30rem">
         <img
-          src="images/homepage.jpg"
+          src="images/kyle.jpg"
           class="img-fluid rounded container-fluid"
           alt="Image of Michael "
           width="400"
