--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
       </nav>
     </h5>
 
-<div class="box shadow-sm mb-4" style="max-width: 30rem">
+<div>
         <img
           src="images/homepage.jpg"
           class="img-fluid rounded container-fluid"
