--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Template</title>
+    <title>Michael Voelkelt</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -37,9 +37,7 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
-                  >Home</a
-                >
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
@@ -53,16 +51,72 @@
       </nav>
     </h5>
 
-<div>
-        <img
-          src="images/homepage.jpg"
-          class="img-fluid rounded container-fluid"
-          alt="Image of Michael "
-          width="400"
-          height="200"
-        />
-      </div>
+    <!-- Main content -->
+    <main class="container p-4">
+      <h1 class="box shadow-sm mb-4" style="max-width: 50rem">Projects</h1>
 
+      <!-- Hero -->
+      <section class="box shadow-sm mb-4 container-fluid">
+        <h2 class="display-6 mb-3">Proposal</h2>
+        <p>
+          This proposal was written for an English Composition 2 class from
+          Arapahoe Community College. We were tasked to write a proposal to
+          someone to pose and offer as a solution to an existing problem. I
+          chose to try and find a solution based on the actions implemented by
+          others. I narrowed down on the diminishing fertility rates of the
+          world specificaly the United States. My proposal was for the state of
+          New Mexico but was not required to be submitted by the end of class.
+          This paper was worked over the entirety of the semester and submitted
+          as the final paper.
+        </p>
+        <iframe
+          src="documents/Final Draft Proposal Essay Michael Voelkelt.pdf"
+          height="600"
+          width="600"
+          title="Proposal"
+        >
+        </iframe>
+        <iframe
+          src="documents/Updated Proposal Essay Presention By Michael Voelkelt.pdf"
+          height="600"
+          width="600"
+        >
+        </iframe>
+      </section>
 
+      <br />
+
+      <section class="box shadow-sm mb-4 container-fluid">
+        <h2 class="display-6 mb-3">Projects</h2>
+        <p>
+          This project was a analytical anaylsis of the ethical theories that
+          Michael Tooley presented in his paper "In defense of abortion and
+          infanticide." We analyzed his paper based on the ethical theories we
+          learned from the class. This paper took place over the course of the
+          semester. This paper tested our analytical skills to see if we could
+          apply theories that Tooley used in his work.
+        </p>
+        <iframe
+          src="documents/Ethics Final Paper - Copy.pdf"
+          height="600"
+          width="1000"
+          title="Analysis of Ethical Theories of “In defense of abortion and infanticide"
+        >
+        </iframe>
+      </section>
+
+      <br />
+
+      <section>
+
+        
+      </section>
+    </main>
+
+    <script>
+      // Load only the #site-nav element
+      $("#nav-placeholder").load("navbar.html #site-nav");
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
