--- a/projects.html
+++ b/projects.html
@@ -74,12 +74,14 @@
           height="600"
           width="600"
           title="Proposal"
+          class="container-fluid"
         >
         </iframe>
         <iframe
           src="documents/Updated Proposal Essay Presention By Michael Voelkelt.pdf"
           height="600"
           width="600"
+          class="container-fluid"
         >
         </iframe>
       </section>
@@ -87,7 +89,7 @@
       <br />
 
       <section class="box shadow-sm mb-4 container-fluid">
-        <h2 class="display-6 mb-3">Projects</h2>
+        <h2 class="display-6 mb-3">Ethical Anaylsis</h2>
         <p>
           This project was a analytical anaylsis of the ethical theories that
           Michael Tooley presented in his paper "In defense of abortion and
@@ -101,15 +103,26 @@
           height="600"
           width="1000"
           title="Analysis of Ethical Theories of “In defense of abortion and infanticide"
+          class="container-fluid"
         >
         </iframe>
       </section>
 
       <br />
 
-      <section>
-
-        
+      <section class="box shadow-sm mb-4 container-fluid">
+        <h2 class="display-6 mb-3">Projects</h2>
+ <p>
+          
+        </p>
+        <iframe
+          src="documents/Ethics Final Paper - Copy.pdf"
+          height="600"
+          width="1000"
+          title="Analysis of Ethical Theories of “In defense of abortion and infanticide"
+          class="container-fluid"
+        >
+        </iframe>
       </section>
     </main>
 
