--- a/projects.html
+++ b/projects.html
@@ -111,12 +111,25 @@
       <br />
 
       <section class="box shadow-sm mb-4 container-fluid">
-        <h2 class="display-6 mb-3">Projects</h2>
- <p>
-          
+        <h2 class="display-6 mb-3">Marching Band</h2>
+        <p>
+          I participated in marching band with Heritage High School for 2 years,
+          while attending another school and earning my Associated Degree, and
+          worked hard with my section and band. Both years we made semi finals
+          in Colorado due to the hard work of everyone involved. I am proud to
+          be one of those members to help our band succeed. I highlighted the
+          offical scores from those years on the attached document.
         </p>
         <iframe
-          src="documents/Ethics Final Paper - Copy.pdf"
+          src="documents/2024 5A Semi-Finals.pdf"
+          height="600"
+          width="1000"
+          title="Analysis of Ethical Theories of “In defense of abortion and infanticide"
+          class="container-fluid"
+        >
+        </iframe>
+        <iframe
+          src="documents/2023 5A Semi-Finals-Finals.pdf"
           height="600"
           width="1000"
           title="Analysis of Ethical Theories of “In defense of abortion and infanticide"
